syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "AbilityInvokeEntry.proto";

message EntityAbilityInvokeEntry {
	uint32 entity_id = 1;
	repeated AbilityInvokeEntry invokes = 2;
}
